--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "jps <me@jspenc.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.2",
     "gulp": "^3.9.1"
   },
   "devDependencies": {
